Fixed alignment

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3098,7 +3098,7 @@ body {
 }
 .cid-rcquEqxlXp {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 0px;
   background-image: url("../../../assets/images/gears-1-960x540.jpg");
 }
 .cid-rcquEqxlXp h4 {
@@ -3141,7 +3141,7 @@ body {
   color: #ffffff;
 }
 .cid-rcqvgdN63U {
-  padding-top: 60px;
+  padding-top: 15px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
